# mwaatk

./: .gitignore  README.md  pyproject.toml
examples/: config.json  example_b.xlsx  example_gain_dark.xlsx  example_s_w.xlsx  example_w.xlsx
examples/results/: MWAAT_out_aae.csv  MWAAT_out_abs.csv  MWAAT_out_abs.json  MWAAT_out_pre_b.csv  MWAAT_out_pre_b.json  MWAAT_out_pre_w.csv  MWAAT_out_pre_w.json
src/mwaatk/: absorbancecalculator.py  alphaminimizer.py  angstrom.py  compoundpreprocessor.py  dataset.py  datasetabsorbancecalculator.py  datasetfromfile.py  filtersample.py  preprocessor.py  toolkit.py
