[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "mwaatk"
version = "1.0.0"
authors = [
	{name = "Tommaso Isolabella", email = "tisolabella@ge.infn.it"},
]
description = "mwaatk - MWAA ToolKit - Perform the analysis of MWAA data"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Natural Language :: English",
	"Programming Language :: Python",
]
dependencies = [
	"numpy",
	"enlighten",
	"matplotlib ~= 3.6.2",
	"openpyxl",
	"pandas",
	"scipy",
] 

[project.scripts]
mwaatk = "mwaatk.toolkit:cli_script"
